Adapt Hazelcast Openshift for Multi Arch
Adapt Hazelcast Openshift for Multi Arch

Update missing libraries

Update start-hazelcast.sh permissions

Update start-hazelcast.sh permissions